chore: remove deleted NeoForge files from old paths
These files were deleted from the working tree (removed in NeoForge
fork) but still tracked. Cleaning up after the repo split.