@@ -1,15 +1,6 @@
 package net.neoforged.neodev;
 
 import com.google.gson.GsonBuilder;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import javax.inject.Inject;
 import net.neoforged.neodev.utils.FileUtils;
 import org.gradle.api.DefaultTask;
 import org.gradle.api.file.RegularFileProperty;
@@ -18,6 +9,15 @@ import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.OutputFile;
 import org.gradle.api.tasks.TaskAction;
+
+import javax.inject.Inject;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
  * Creates the userdev configuration file used by the various Gradle plugins used to develop
@@ -28,6 +28,9 @@ import org.gradle.api.tasks.TaskAction;
 abstract class CreateUserDevConfig extends DefaultTask {
     @Inject
     public CreateUserDevConfig() {}
+
+    @Input
+    abstract Property<String> getFmlVersion();
 
     @Input
     abstract Property<String> getMinecraftVersion();
@@ -42,7 +45,13 @@ abstract class CreateUserDevConfig extends DefaultTask {
     abstract ListProperty<String> getLibraries();
 
     @Input
+    abstract ListProperty<String> getModules();
+
+    @Input
     abstract ListProperty<String> getTestLibraries();
+
+    @Input
+    abstract ListProperty<String> getIgnoreList();
 
     @Input
     abstract Property<String> getBinpatcherGav();
@@ -52,30 +61,33 @@ abstract class CreateUserDevConfig extends DefaultTask {
 
     @TaskAction
     public void writeUserDevConfig() throws IOException {
-        var features = new UserDevFeatures(
-                true, //Since 21.9 we use a more advanced version of FML which discovers dependencies and their libraries directly from the CP, no need for additional classpath elements.,
-                true //Since 21.10 we use a new binary patch format, which can be used to massively speed up the creation of a CICD, or decompiler less version of our artifacts.
-        );
-
         var config = new UserDevConfig(
                 2,
                 "net.neoforged:neoform:%s-%s@zip".formatted(getMinecraftVersion().get(), getRawNeoFormVersion().get()),
                 "ats/",
-                "patches.lzma",
+                "joined.lzma",
                 new BinpatcherConfig(
                         getBinpatcherGav().get(),
-                        List.of("--patch", "--base", "{clean}", "--base-type", "JOINED", "--output", "{output}", "--patches", "{patch}")),
+                        List.of("--clean", "{clean}", "--output", "{output}", "--apply", "{patch}")),
                 "patches/",
                 "net.neoforged:neoforge:%s:sources".formatted(getNeoForgeVersion().get()),
                 "net.neoforged:neoforge:%s:universal".formatted(getNeoForgeVersion().get()),
                 getLibraries().get(),
                 getTestLibraries().get(),
                 new LinkedHashMap<>(),
-                List.of() /* deprecated: modules */,
-                features);
+                getModules().get());
 
         for (var runType : RunType.values()) {
+            var launchTarget = switch (runType) {
+                case CLIENT -> "forgeclientdev";
+                case DATA -> "forgedatadev";
+                case GAME_TEST_SERVER, SERVER -> "forgeserverdev";
+                case JUNIT -> "forgejunitdev";
+            };
+
             List<String> args = new ArrayList<>();
+            Collections.addAll(args,
+                    "--launchTarget", launchTarget);
 
             if (runType == RunType.CLIENT || runType == RunType.JUNIT) {
                 // TODO: this is copied from NG but shouldn't it be the MC version?
@@ -83,59 +95,72 @@ abstract class CreateUserDevConfig extends DefaultTask {
                         "--version", getNeoForgeVersion().get());
             }
 
-            if (runType == RunType.CLIENT || runType == RunType.CLIENT_DATA || runType == RunType.JUNIT) {
+            if (runType == RunType.CLIENT || runType == RunType.DATA || runType == RunType.JUNIT) {
                 Collections.addAll(args,
                         "--assetIndex", "{asset_index}",
                         "--assetsDir", "{assets_root}");
             }
 
+            Collections.addAll(args,
+                    "--gameDir", ".",
+                    "--fml.fmlVersion", getFmlVersion().get(),
+                    "--fml.mcVersion", getMinecraftVersion().get(),
+                    "--fml.neoForgeVersion", getNeoForgeVersion().get(),
+                    "--fml.neoFormVersion", getRawNeoFormVersion().get());
+
             Map<String, String> systemProperties = new LinkedHashMap<>();
             systemProperties.put("java.net.preferIPv6Addresses", "system");
+            systemProperties.put("ignoreList", String.join(",", getIgnoreList().get()));
+            systemProperties.put("legacyClassPath.file", "{minecraft_classpath_file}");
 
             if (runType == RunType.CLIENT || runType == RunType.GAME_TEST_SERVER) {
                 systemProperties.put("neoforge.enableGameTest", "true");
+
+                if (runType == RunType.GAME_TEST_SERVER) {
+                    systemProperties.put("neoforge.gameTestServer", "true");
+                }
             }
 
             config.runs().put(runType.jsonName, new UserDevRunType(
                     runType != RunType.JUNIT,
-                    // Archloom crashes when reading a userconfig without a main class
-                    Objects.requireNonNullElse(runType.mainClass, "NONE"),
+                    "cpw.mods.bootstraplauncher.BootstrapLauncher",
                     args,
                     List.of(
-                            "--sun-misc-unsafe-memory-access=allow",
-                            "--enable-native-access=ALL-UNNAMED",
-                            "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+                            "-p", "{modules}",
+                            "--add-modules", "ALL-MODULE-PATH",
+                            "--add-opens", "java.base/java.util.jar=cpw.mods.securejarhandler",
+                            "--add-opens", "java.base/java.lang.invoke=cpw.mods.securejarhandler",
+                            "--add-exports", "java.base/sun.security.util=cpw.mods.securejarhandler",
                             "--add-exports", "jdk.naming.dns/com.sun.jndi.dns=java.naming"),
-                    runType == RunType.CLIENT || runType == RunType.JUNIT || runType == RunType.CLIENT_DATA,
-                    runType == RunType.GAME_TEST_SERVER || runType == RunType.SERVER || runType == RunType.SERVER_DATA,
-                    runType == RunType.CLIENT_DATA || runType == RunType.SERVER_DATA,
+                    runType == RunType.CLIENT || runType == RunType.JUNIT,
+                    runType == RunType.GAME_TEST_SERVER || runType == RunType.SERVER,
+                    runType == RunType.DATA,
                     runType == RunType.CLIENT || runType == RunType.GAME_TEST_SERVER,
                     runType == RunType.JUNIT,
                     Map.of(
                             "MOD_CLASSES", "{source_roots}"),
-                    systemProperties));
+                    systemProperties
+            ));
         }
 
         FileUtils.writeStringSafe(
                 getUserDevConfig().getAsFile().get().toPath(),
                 new GsonBuilder().setPrettyPrinting().disableHtmlEscaping().create().toJson(config),
+                // TODO: Not sure what this should be? Most likely the file is ASCII.
                 StandardCharsets.UTF_8);
     }
 
     private enum RunType {
-        CLIENT("client", "net.neoforged.fml.startup.Client"),
-        CLIENT_DATA("clientData", "net.neoforged.fml.startup.DataClient"),
-        SERVER_DATA("serverData", "net.neoforged.fml.startup.DataServer"),
-        GAME_TEST_SERVER("gameTestServer", "net.neoforged.fml.startup.GameTestServer"),
-        SERVER("server", "net.neoforged.fml.startup.Server"),
-        JUNIT("junit", null);
+        CLIENT("client"),
+        DATA("data"),
+        GAME_TEST_SERVER("gameTestServer"),
+        SERVER("server"),
+        JUNIT("junit");
 
         private final String jsonName;
-        private final String mainClass;
 
-        RunType(String jsonName, String mainClass) {
+        RunType(String jsonName) {
             this.jsonName = jsonName;
-            this.mainClass = mainClass;
         }
     }
 }
@@ -152,12 +177,7 @@ record UserDevConfig(
         List<String> libraries,
         List<String> testLibraries,
         Map<String, UserDevRunType> runs,
-        List<String> modules,
-        UserDevFeatures features) {}
-
-record UserDevFeatures(
-        boolean noLegacyClasspath,
-        boolean combinedBinaryPatches) {}
+        List<String> modules) {}
 
 record BinpatcherConfig(
         String version,
